# dir-tree

./: Cargo.toml
examples/: bench_scan.rs
src/: config.rs  main.rs
src/app/: event.rs  fs_runtime.rs  handler.rs  mod.rs  settings.rs  size_runtime.rs  state.rs
src/core/: fs.rs  grouping.rs  inspector.rs  mod.rs  search.rs  size.rs  tree.rs
src/shell/: integration.rs  mod.rs
src/ui/: inspector.rs  layout.rs  lightbox.rs  mod.rs  popup.rs  search.rs  smooth_scroll.rs  spinner.rs  theme.rs  tree_widget.rs
